Use smaller image and condense steps
fuel/centos base image includes both
ruby21-puppet and logrotate, reducing
the number of steps for docker build.

Additionally, condense some commands
where sensible in dockerfiles

blueprint small-docker-container-base-image

Change-Id: I0fe2d4e1b59f1b1124cb0dde48e46a8c176a51ab

--- a/docker/astute/Dockerfile
+++ b/docker/astute/Dockerfile
@@ -2,28 +2,17 @@
 #
 # Version     0.1
 
-FROM centos
+FROM fuel/centos
 MAINTAINER Matthew Mosesohn mmosesohn@mirantis.com
 
-WORKDIR /root
-
-RUN rm -rf /etc/yum.repos.d/*
-RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(route -n | awk '/^0.0.0.0/ { print $2 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo
-RUN yum clean all
-RUN yum --quiet install -y ruby21-puppet ruby21-nailgun-mcagents logrotate
-
-#FIXME(mattymo): workaround until astute has this dependency
-RUN yum --quiet install -y openssh-clients
+RUN rm -rf /etc/yum.repos.d/*; echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(route -n | awk '/^0.0.0.0/ { print $2 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo; yum clean all; yum --quiet install -y ruby21-nailgun-mcagents
 
 ADD etc /etc
+ADD start.sh /usr/local/bin/start.sh
+
 RUN puppet apply -d -v /etc/puppet/modules/nailgun/examples/astute-only.pp
 
-RUN mkdir -p /usr/local/bin
-ADD start.sh /usr/local/bin/start.sh
-RUN chmod +x /usr/local/bin/start.sh
-
-RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=file:/var/www/nailgun/centos/fuelweb/x86_64\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo
-RUN yum clean all
+RUN chmod +x /usr/local/bin/start.sh;echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=file:/var/www/nailgun/centos/fuelweb/x86_64\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo; yum clean all
 
 VOLUME /etc/astute
 CMD /usr/local/bin/start.sh
