--- a/docker/rabbitmq/Dockerfile
+++ b/docker/rabbitmq/Dockerfile
@@ -1,28 +1,17 @@
-FROM centos
+#fuel/rabbitmq
 
+FROM fuel/centos
 MAINTAINER Aleksandr Didenko adidenko@mirantis.com
 
-WORKDIR /root
-
-RUN rm -rf /etc/yum.repos.d/*
-RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(route -n | awk '/^0.0.0.0/ { print $2 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo
-RUN yum clean all
-RUN yum --quiet install -y ruby21-puppet rabbitmq-server logrotate
+RUN rm -rf /etc/yum.repos.d/*; echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(route -n | awk '/^0.0.0.0/ { print $2 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo; yum clean all; yum --quiet install -y rabbitmq-server
 
 ADD etc /etc
-
-RUN mkdir -p /var/lib/hiera && touch /var/lib/hiera/common.yaml; mkdir -p /var/log/rabbitmq
-RUN /usr/bin/puppet apply -v /etc/puppet/modules/nailgun/examples/rabbitmq-only.pp
-
 ADD start.sh /usr/local/bin/start.sh
-RUN chmod +x /usr/local/bin/start.sh
 
-RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=file:/var/www/nailgun/centos/fuelweb/x86_64\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo
-RUN yum clean all
+RUN mkdir -p /var/lib/hiera /var/log/rabbitmq; touch /var/lib/hiera/common.yaml;/usr/bin/puppet apply -v /etc/puppet/modules/nailgun/examples/rabbitmq-only.pp
 
-EXPOSE 4369
-EXPOSE 5672
-EXPOSE 15672
-EXPOSE 61613
 
+RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=file:/var/www/nailgun/centos/fuelweb/x86_64\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo; yum clean all; chmod +x /usr/local/bin/start.sh
+
+EXPOSE 4369 5672 15672 61613
 CMD ["/usr/local/bin/start.sh"]
