--- a/docker/astute/Dockerfile
+++ b/docker/astute/Dockerfile
@@ -2,7 +2,7 @@
 #
 # Version     0.1
 
-FROM centos
+FROM fuel/centos
 MAINTAINER Matthew Mosesohn mmosesohn@mirantis.com
 
 WORKDIR /root
@@ -10,10 +10,7 @@ WORKDIR /root
 RUN rm -rf /etc/yum.repos.d/*
 RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(route -n | awk '/^0.0.0.0/ { print $2 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo
 RUN yum clean all
-RUN yum --quiet install -y ruby21-puppet ruby21-nailgun-mcagents logrotate
-
-#FIXME(mattymo): workaround until astute has this dependency
-RUN yum --quiet install -y openssh-clients
+RUN yum --quiet install -y ruby21-nailgun-mcagents
 
 ADD etc /etc
 RUN puppet apply -d -v /etc/puppet/modules/nailgun/examples/astute-only.pp
