--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -3,7 +3,7 @@
 # -volumes-from storage-dump
 # --volume "/etc/fuel:/etc/fuel"
 
-FROM centos
+FROM fuel/centos
 MAINTAINER Matthew Mosesohn mmosesohn@mirantis.com
 
 WORKDIR /root
@@ -11,7 +11,6 @@ WORKDIR /root
 RUN rm -rf /etc/yum.repos.d/*
 RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(route -n | awk '/^0.0.0.0/ { print $2 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo
 RUN yum clean all
-RUN yum --quiet install -y ruby21-puppet logrotate
 RUN yum --quiet -y install nginx
 
 ADD etc /etc
