--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -258,7 +258,7 @@ numpy-1.4.1-9.el6
 openssh-clients-5.3p1-84.1.el6
 openssh-server-5.3p1-84.1.el6
 openssl-devel
-openssl098e-0.9.8e-17.el6.centos.2
+openssl
 openstack-ceilometer-api
 openstack-ceilometer-alarm
 openstack-ceilometer-central
