Use original nailgun directory instead of symlink
Change-Id: I7c4362923cefefb87b9d2a6f44c0786d8d13d581
Closes-Bug: #1330427

--- a/docker/storage-repo/Dockerfile
+++ b/docker/storage-repo/Dockerfile
@@ -2,4 +2,4 @@
 FROM busybox
 RUN mkdir -p /var/www/nailgun/
 VOLUME /var/www/nailgun/
-CMD /bin/echo storage/repo I am a data-only container for Fuel && ln -s /repo/* /var/www/nailgun/
+CMD /bin/echo storage/repo I am a data-only container for Fuel
