--- a/fuelweb_test/requirements.txt
+++ b/fuelweb_test/requirements.txt
@@ -8,5 +8,6 @@ python-glanceclient>=0.9.0
 python-keystoneclient>=0.3.2
 python-novaclient>=2.15.0
 python-cinderclient>=1.0.5
+python-neutronclient>=2.0
 Jinja2
 AllPairs==2.0.1
