--- a/iso/ks.template
+++ b/iso/ks.template
@@ -375,13 +375,11 @@ chmod 600 /root/.ssh/bootstrap.rsa
 
 # Unpacking puppet manifests for master and slave
 cp ${SOURCE}/puppet-slave.tgz ${repodir}/
-#mkdir -p /opt/nailgun_puppet
-#tar zxf ${SOURCE}/puppet-nailgun.tgz -C /opt/nailgun_puppet
 tar zxf ${SOURCE}/puppet-slave.tgz -C /etc/puppet/modules
 mkdir -p /etc/puppet/manifests/
 cp /etc/puppet/modules/osnailyfacter/examples/site.pp /etc/puppet/manifests/site.pp
+cp ${SOURCE}/centos-versions.yaml ${SOURCE}/ubuntu-versions.yaml /etc/puppet/manifests/
 cp ${SOURCE}/send2syslog.py /bin/send2syslog.py
-#ln -s /etc/puppet/modules/mcollective /etc/puppet/modules/nailgun /etc/puppet/modules/osnailyfacter  /etc/puppet/modules/stdlib /etc/puppet/modules/rabbitmq /etc/puppet/modules/puppetdb/ /etc/puppet/modules/postgresql/ /etc/puppet/modules/inifile/ /etc/puppet/modules/sysctl/ /opt/nailgun_puppet/
 mkdir -p /var/lib/hiera
 touch /var/lib/hiera/common.yaml /etc/puppet/hiera.yaml 
 
