--- a/docker/docker-astute.yaml
+++ b/docker/docker-astute.yaml
@@ -17,3 +17,19 @@ ADMIN_NETWORK:
   dhcp_pool_end: 10.20.0.254
 uid: master
 TEST_DNS: www.google.com
+astute:
+  password: naily
+  user: naily
+cobbler:
+  password: cobbler
+  user: cobbler
+mcollective:
+  password: mcollective
+  user: mcollective
+postgres:
+  nailgun_dbname: nailgun
+  nailgun_user: nailgun
+  nailgun_password: nailgun
+  ostf_dbname: ostf
+  ostf_user: ostf
+  ostf_password: ostf
