Fix yum config for some containers
Corrects issue where yum reconfig was missing
a semicolon, writing an incorrect yum repo.

Change-Id: I4d3a73db9ae808f1e4cd566b84592eaebc1dd421
Closes-Bug: #1333147

--- a/docker/ostf/Dockerfile
+++ b/docker/ostf/Dockerfile
@@ -13,7 +13,7 @@ ADD start.sh /usr/local/bin/start.sh
 RUN puppet apply -v /etc/puppet/modules/nailgun/examples/ostf-only.pp
 
 
-RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=file:/var/www/nailgun/centos/fuelweb/x86_64\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo yum clean all; chmod +x /usr/local/bin/start.sh
+RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=file:/var/www/nailgun/centos/fuelweb/x86_64\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo; yum clean all; chmod +x /usr/local/bin/start.sh
 
 EXPOSE 8777
 CMD /usr/local/bin/start.sh
