--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -272,6 +272,7 @@ openstack-ceilometer-central
 openstack-ceilometer-collector
 openstack-ceilometer-common
 openstack-ceilometer-compute
+openstack-ceilometer-notification
 openstack-cinder
 openstack-dashboard
 openstack-glance
