Add ceilometer-notification package to requirements
Change-Id: I7e00375029acc94ba4659aa51546938dcf9e0bb8
Partial-bug: #1333722

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -270,6 +270,7 @@ openstack-ceilometer-central
 openstack-ceilometer-collector
 openstack-ceilometer-common
 openstack-ceilometer-compute
+openstack-ceilometer-notification
 openstack-cinder
 openstack-dashboard
 openstack-glance
