Building OS images centos and ubuntu
Those images are supposed to be used for
image based provisioning. This patch set
needs python-imgcreate package to be available.

Implements: blueprint image-based-provisioning
Change-Id: I4f038c99d4caf7d2b6e291bff29572b3a45d92c7

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -398,6 +398,9 @@ chmod 700 /root/.ssh
 cp ${SOURCE}/bootstrap/bootstrap.rsa /root/.ssh
 chmod 600 /root/.ssh/bootstrap.rsa
 
+# Copying target OS images
+test -d ${SOURCE}/targetimages && cp -r ${SOURCE}/targetimages ${repodir}
+
 # Unpacking puppet manifests for master and slave
 cp ${SOURCE}/puppet-slave.tgz ${repodir}/
 tar zxf ${SOURCE}/puppet-slave.tgz -C /etc/puppet/modules
