--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -50,6 +50,7 @@ cinder-scheduler
 cinder-volume
 cirros-testvm
 cirros-testvmware
+cloud-init
 cluster-glue
 command-not-found
 command-not-found-data
