Building OS images centos and ubuntu
Those images are supposed to be used for
image based provisioning. This patch set
needs python-imgcreate package to be available.

Implements: blueprint image-based-provisioning
Change-Id: I4f038c99d4caf7d2b6e291bff29572b3a45d92c7

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -41,6 +41,7 @@ ceph-radosgw
 ceph-test
 cirros-testvm
 cirros-testvmware
+cloud-init
 cluster-glue-libs-1.0.11-59.1
 cman
 cobbler
@@ -372,6 +373,7 @@ python-greenlet
 python-greenlet-devel
 python-heatclient
 python-httplib2-0.7.7-1.el6
+python-imgcreate
 python-importlib-1.0.2-1.el6
 python-ipaddr-2.1.9-1.el6
 python-iso8601
