Add keystone access to astute.yaml for builds
These values need to be available for docker build
so that nailgun can populate its config temporarily
before deployment.

blueprint access-control-master-node

Change-Id: I972c07c72edfef29cb438d762b6a1aa00dc645d1

--- a/docker/docker-astute.yaml
+++ b/docker/docker-astute.yaml
@@ -15,6 +15,9 @@ ADMIN_NETWORK:
   static_pool_end: 10.20.0.120
   dhcp_pool_start: 10.20.0.130
   dhcp_pool_end: 10.20.0.254
+FUEL_ACCESS:
+  user: admin
+  password: admin
 uid: master
 TEST_DNS: www.google.com
 astute:
@@ -23,6 +26,8 @@ astute:
 cobbler:
   password: cobbler
   user: cobbler
+keystone:
+  admin_token: admin
 mcollective:
   password: mcollective
   user: mcollective
