--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -130,7 +130,7 @@ erlang-typer-R14B-04.8.el6
 erlang-webtool-R14B-04.8.el6
 erlang-wx-R14B-04.8.el6
 erlang-xmerl-R14B-04.8.el6
-euca2ools-2.1.3-1.el6
+euca2ools
 fcgiwrap-1.0.3-2
 fence-agents
 fencing-agent
@@ -340,7 +340,6 @@ python-amqplib-1.0.2-1.el6
 python-anyjson-0.3.3-2.el6
 python-argparse-1.2.1-2.el6
 python-blockdiag-1.2.4-1
-python-boto-2.5.2-3.el6
 python-ceilometer
 python-ceilometerclient
 python-ceph
