--- a/iso/ks.template
+++ b/iso/ks.template
@@ -237,23 +237,28 @@ cronie
 crontabs
 curl
 daemonize
+dhcp
 docker-io
 fuelmenu
 gdisk
-dhcp
+lrzip
+lsof
 man
 mlocate
+nmap-ncat
 ntp
-lrzip
 openssh-clients
 policycoreutils
+rsync
 ruby21-puppet
 ruby21-rubygem-netaddr
 ruby21-rubygem-openstack
 selinux-policy-targeted
+strace
 subscription-manager
 system-config-firewall-base
 tcpdump
+telnet
 vim-enhanced
 virt-what
 wget
