Add neutron-plugin-ml2 packaegs for rpm and deb to requirements-*.txt
Related-bug: #1335751
Change-Id: I5a032740cc0bbd5111ee95cf8a67a9cb73d56ef4

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -285,6 +285,7 @@ openstack-neutron
 openstack-neutron-linuxbridge
 openstack-neutron-openvswitch
 openstack-neutron-vmware
+openstack-neutron-ml2
 openstack-nova
 openstack-nova-api
 openstack-nova-cells
