--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -559,6 +559,7 @@ netcat-openbsd
 neutron-common
 neutron-dhcp-agent
 neutron-l3-agent
+neutron-plugin-ml2
 neutron-metadata-agent
 neutron-plugin-openvswitch
 neutron-plugin-openvswitch-agent
