Add MySQL 5.6 to specification
Change-Id: I43201cd87968a3d75b44bd8697b02e2e49471954

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -544,9 +544,8 @@ multiarch-support
 murano-api
 murano-dashboard
 murano-apps
-mysql-client
-mysql-common
-mysql-server-wsrep
+mysql-client-5.6
+mysql-server-wsrep-5.6
 nailgun-agent
 nailgun-mcagents
 nailgun-net-check
