--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -4,13 +4,10 @@ Django-1.3.4-1.el6
 Django14
 docker-io
 GeoIP-1.4.8-1.el6
-MySQL-client-5.5.28-7
-MySQL-client-wsrep-5.5.28_wsrep_23.7-12
+MySQL-client-wsrep-5.6.16_wsrep_25.5
 MySQL-python
-MySQL-server-5.5.28-7
-MySQL-server-wsrep-5.5.28_wsrep_23.7-12
-MySQL-shared-5.5.28-7
-MySQL-shared-wsrep-5.5.28_wsrep_23.7-12
+MySQL-server-wsrep-5.6.16_wsrep_25.5
+MySQL-shared-wsrep-5.6.16_wsrep_25.5
 mongodb
 mongodb-server
 PyYAML-3.10-3.el6
@@ -137,7 +134,7 @@ fencing-agent
 flex-2.5.35-8.el6
 fuel-utils
 fuse-libs-2.8.3-4.el6
-galera
+galera-25.3.5
 gcc
 gcc-c++
 gdisk-0.8.4-1.el6
