--- a/fuelweb_test/requirements.txt
+++ b/fuelweb_test/requirements.txt
@@ -4,6 +4,7 @@ anyjson==0.3.1
 paramiko
 proboscis==1.2.6.0
 ipaddr
+junitxml>=0.7.0
 python-glanceclient>=0.9.0
 python-keystoneclient>=0.3.2
 python-novaclient>=2.15.0
