Add libguestfs-tools for Ubuntu
New "nova" upstream module requires "libguestfs-tools" package.

Partial blueprint merge-openstack-puppet-modules

Change-Id: Ic482c6611a1147ebeaaa9eff48feab05d1fb052d

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -324,6 +324,7 @@ libgtk2.0-0
 libgtk2.0-bin
 libgtk2.0-common
 libguestfs0
+libguestfs-tools
 libhcrypto4-heimdal
 libheimbase1-heimdal
 libheimntlm0-heimdal
