Add all neutron packages to requirements
It has come up in several requests that we should have packages present for
 all of the neutron components so that any patches we might have included are
 present in the repos on the fuel-master.

This is not intended to be a "fuel suppports ..." but rather enables users to
 customize their deployment accordingly and not have to find packages that
 where not built from the same sources which would cause more problems for
 them.

Change-Id: I25299df0cb331186187e47920c01231181051f7f
Closes-bug: #1330610
Related-blueprint: ml2-neutron

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -281,8 +281,25 @@ openstack-heat-common
 openstack-heat-engine
 openstack-keystone
 openstack-neutron
+openstack-neutron-bigswitch
+openstack-neutron-brocade
+openstack-neutron-cisco
+openstack-neutron-hyperv
+openstack-neutron-ibm
 openstack-neutron-linuxbridge
+openstack-neutron-mellanox
+openstack-neutron-metering-agent
+openstack-neutron-midonet
+openstack-neutron-ml2
+openstack-neutron-nec
+openstack-neutron-nuage
+openstack-neutron-ofagent
+openstack-neutron-oneconvergence-nvsd
 openstack-neutron-openvswitch
+openstack-neutron-plumgrid
+openstack-neutron-ryu
+openstack-neutron-vmware
+openstack-neutron-vpn-agent
 openstack-nova
 openstack-nova-api
 openstack-nova-cells
