--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -559,10 +559,39 @@ netcat-openbsd
 neutron-common
 neutron-dhcp-agent
 neutron-l3-agent
+neutron-lbaas-agent
 neutron-metadata-agent
-neutron-plugin-openvswitch
+neutron-metering-agent
+neutron-plugin-bigswitch-agent
+neutron-plugin-bigswitch
+neutron-plugin-brocade
+neutron-plugin-cisco
+neutron-plugin-hyperv
+neutron-plugin-ibm-agent
+neutron-plugin-ibm
+neutron-plugin-linuxbridge-agent
+neutron-plugin-linuxbridge
+neutron-plugin-metaplugin
+neutron-plugin-metering-agent
+neutron-plugin-midonet
+neutron-plugin-ml2
+neutron-plugin-mlnx-agent
+neutron-plugin-mlnx
+neutron-plugin-nec-agent
+neutron-plugin-nec
+neutron-plugin-nicira
+neutron-plugin-oneconvergence-agent
+neutron-plugin-oneconvergence
+neutron-plugin-openflow-agent
 neutron-plugin-openvswitch-agent
+neutron-plugin-openvswitch
+neutron-plugin-plumgrid
+neutron-plugin-ryu-agent
+neutron-plugin-ryu
+neutron-plugin-vmware
+neutron-plugin-vpn-agent
 neutron-server
+neutron-vpn-agent
 nfs-common
 nginx
 node-less
