Added rescue image into iso
Rescue image is supposed to be used
as an additional option in PXE boot menu.
It is useful for troubleshooting.

Change-Id: Ib756c112b915f8327b1e8c6e1cfcb987cc9fc33f
Relates-BP: rip-linux-pxe-options

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -391,6 +391,12 @@ chmod 700 /root/.ssh
 cp ${SOURCE}/bootstrap/bootstrap.rsa /root/.ssh
 chmod 600 /root/.ssh/bootstrap.rsa
 
+# Copying rescue image
+mkdir -p ${repodir}/rescue
+cp -r ${SOURCE}/rescue/initrd ${repodir}/rescue
+cp -r ${SOURCE}/rescue/linux ${repodir}/rescue
+
+
 # Unpacking puppet manifests for master and slave
 cp ${SOURCE}/puppet-slave.tgz ${repodir}/
 tar zxf ${SOURCE}/puppet-slave.tgz -C /etc/puppet/modules
@@ -399,7 +405,7 @@ cp /etc/puppet/modules/osnailyfacter/examples/site.pp /etc/puppet/manifests/site
 cp ${SOURCE}/centos-versions.yaml ${SOURCE}/ubuntu-versions.yaml /etc/puppet/manifests/
 cp ${SOURCE}/send2syslog.py /bin/send2syslog.py
 mkdir -p /var/lib/hiera
-touch /var/lib/hiera/common.yaml /etc/puppet/hiera.yaml 
+touch /var/lib/hiera/common.yaml /etc/puppet/hiera.yaml
 
 # Deploy docker images and ctl tools if we built ISO with docker containers support
 [ -d "${SOURCE}/docker" ] && cp -r ${SOURCE}/docker ${repodir}/docker
@@ -496,4 +502,3 @@ cp -f /etc/skel/.bash* /root/
 [[ $(virt-what) = "virtualbox" ]] && echo "blacklist i2c_piix4" > /etc/modprobe.d/blacklist-i2c-piix4.conf
 
 %end
-
