--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -44,6 +44,7 @@ ceph-test
 cirros-testvm
 cirros-testvmware
 cloud-init
+cloud-utils
 cluster-glue-libs-1.0.11-59.1
 cman
 cobbler
@@ -71,6 +72,7 @@ dmidecode-2.11-2.el6
 dnsmasq-2.65-5.el6
 dnsmasq-utils-2.65-5.el6
 dstat
+e2fsprogs
 ed-1.1-3.3.el6
 erlang-R14B-04.8.el6
 erlang-appmon-R14B-04.8.el6
@@ -142,6 +144,7 @@ galera
 gcc
 gcc-c++
 gdisk-0.8.4-1.el6
+genisoimage
 git
 gperftools-libs-2.0-11.el6.3
 gpxe-bootimgs
