Use direct mount for puppet docker container
Removing workaround for mount of /etc/puppet
to /puppet, then ln -s /puppet/{files} into
/etc/puppet, because it breaks upgrade schema
where /etc/puppet/$VER is added.

Change-Id: I31470af079bc88ae4303dc511bfe2b1c1c9c2fed
Partial-Bug: #1339688
(cherry picked from commit 8b658b11be66afea92acbe362064aa5ee41de22a)

--- a/docker/storage-puppet/Dockerfile
+++ b/docker/storage-puppet/Dockerfile
@@ -1,5 +1,4 @@
-#run with -v /etc/puppet:/puppet
+#run with -v /etc/puppet:/etc/puppet
 FROM busybox
-RUN mkdir -p /etc/puppet/ /puppet 
 VOLUME ["/etc/puppet"]
-CMD /bin/echo storage/puppet I am a data-only container for Fuel && ln -s /puppet/puppet.conf /puppet/modules /puppet/manifests /etc/puppet/
+CMD /bin/echo storage/puppet I am a data-only container for Fuel
