--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -547,7 +547,7 @@ murano-dashboard
 murano-apps
 mysql-client
 mysql-common
-mysql-server-wsrep
+mysql-server-wsrep-5.6
 nailgun-agent
 nailgun-mcagents
 nailgun-net-check
