--- a/docker/nailgun/Dockerfile
+++ b/docker/nailgun/Dockerfile
@@ -12,7 +12,7 @@ RUN rm -rf /etc/yum.repos.d/*;echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseu
 ADD etc /etc
 ADD start.sh /usr/local/bin/start.sh
 
-RUN puppet apply -v /etc/puppet/modules/nailgun/examples/nailgun-only.pp
+RUN puppet apply --detailed-exitcodes -d -v /etc/puppet/modules/nailgun/examples/nailgun-only.pp; [ $? -lt 4 ]
 RUN mkdir -p /var/log/remote /var/www/nailgun
 
 #clean everything up
