--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -9,7 +9,7 @@ ADD etc /etc
 ADD start.sh /usr/local/bin/start.sh
 
 RUN mkdir -p /var/www/nailgun;chmod 755 /var/www/nailgun
-RUN puppet apply -v /etc/puppet/modules/nailgun/examples/nginx-only.pp
+RUN puppet apply --detailed-exitcodes -d -v /etc/puppet/modules/nailgun/examples/nginx-only.pp; [ $? -lt 4 ]
 
 
 RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=file:/var/www/nailgun/centos/fuelweb/x86_64\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo; yum clean all; chmod +x /usr/local/bin/start.sh
