Change requirements for MySQL 5.6
- Add MySQL 5.6 to Ubuntu

Change-Id: Ia9b78e6c0e02cb2abc1be62cfe01c69767b3eb53

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -546,7 +546,10 @@ murano-api
 murano-dashboard
 murano-apps
 mysql-client
+mysql-client-wsrep
 mysql-common
+mysql-wsrep-common
+mysql-server
 mysql-server-wsrep-5.6
 nailgun-agent
 nailgun-mcagents
