--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -546,7 +546,10 @@ murano-api
 murano-dashboard
 murano-apps
 mysql-client
+mysql-client-5.6
 mysql-common
+mysql-wsrep-common-5.6
+mysql-server
 mysql-server-wsrep-5.6
 nailgun-agent
 nailgun-mcagents
