Change requirements for MySQL 5.6
- Add MySQL 5.6 to Ubuntu
- Add percona-xtrabackup to CentOS and Ubuntu

Change-Id: Ia9b78e6c0e02cb2abc1be62cfe01c69767b3eb53

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -545,8 +545,7 @@ multiarch-support
 murano-api
 murano-dashboard
 murano-apps
-mysql-client
-mysql-common
+mysql-client-wsrep-5.6
 mysql-server-wsrep-5.6
 nailgun-agent
 nailgun-mcagents
@@ -602,6 +601,7 @@ passwd
 patch
 pciutils
 percona-toolkit
+percona-xtrabackup
 perl
 perl-base
 perl-modules
