Add Cirros VM with MLNX drivers to fuel mirrors
Change-Id: I3f475ffc9f611932b37aaa729cd5e8dfb2782ce0
Closes-Bug: 1340751

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -40,6 +40,7 @@ ceph-deploy
 ceph-radosgw
 ceph-test
 cirros-testvm
+cirros-testvm-mellanox
 cirros-testvmware
 cluster-glue-libs-1.0.11-59.1
 cman
