Added package storrest that needed by the LSI feature
Added repo of Storrest, that needed for making storrert package
during the creation of iso. This package will be installed in bootstrap
and all openstack nodes to collect information about LSI/AVAGO Raids.

Implements: blueprint lsi-raid-controllers

Change-Id: Ifd8a45a8fbf231ad4e2e9190680654e5f75fc182

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -260,6 +260,7 @@ novnc-0.4
 nrpe-2.14-3.el6
 ntp
 numpy-1.4.1-9.el6
+nytrocli
 openssh-clients
 openssh-server
 openssl-devel
@@ -326,6 +327,7 @@ parted
 passwd-0.77-4.el6_2.2
 patch-2.6-6.el6
 pax-3.4-10.1.el6
+pciutils
 pcapy-0.10.8-2.el6
 percona-toolkit
 perl-DBD-MySQL-4.022-1.el6
@@ -452,6 +454,7 @@ python-websockify
 python-werkzeug
 python-wsgilog-0.3-1
 python-wsgiref-0.1.2-6.el6
+python-webpy
 pyxattr-0.5.0-1.el6
 qemu
 qpid-cpp-server-ssl-0.14-22.el6_3
@@ -585,6 +588,7 @@ supervisor
 syslinux-4.02-8.el6
 system-config-firewall-base-1.2.27-5.el6
 sheepdog
+storrest
 tcpdump-4.0.0-3.20090921gitdf3cb4.2.el6
 tftp-server-0.49-7.el6
 time-1.7-37.1.el6
