--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -155,10 +155,10 @@ httpd-tools-2.2.15-15.el6.1
 iproute-2.6.32-130.el6.netns.2.mira1
 json-c
 keepalived-1.2.4-1.el6
-kernel-2.6.32-431.el6.x86_64
-kernel-devel-2.6.32-431.el6.x86_64
-kernel-firmware-2.6.32-431.el6.x86_64
-kernel-headers-2.6.32-431.el6.x86_64
+kernel-2.6.32-431.20.3.el6
+kernel-devel-2.6.32-431.20.3.el6
+kernel-firmware-2.6.32-431.20.3.el6
+kernel-headers-2.6.32-431.20.3.el6
 kernel-lt
 kernel-lt-devel
 kernel-lt-headers
