Add xtrabackup packages to ubuntu and centos Closes-bug: #1336773
Change-Id: Id9cc17ca7a3e7172302fce37abf8d87ab9636091

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -615,6 +615,7 @@ wxGTK-2.8.12-2.el6
 wxGTK-gl-2.8.12-2.el6
 xfsprogs
 xinetd
+xtrabackup
 yum-3.2.29-40.el6.centos
 yum-utils-1.1.30-14.el6
 zeromq
