--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -551,8 +551,8 @@ multiarch-support
 murano-api
 murano-dashboard
 murano-apps
-mysql-client
-mysql-common
+mysql-client-5.6
+mysql-common-5.6
 mysql-server-wsrep-5.6
 nailgun-agent
 nailgun-mcagents
