Add hidden option testmode=yes to kernel args
testmode will prevent Fuel Master from
deploying. It can be used to make changes
prior to Puppet deployment.

blueprint fuel-master-ci-tests

Change-Id: If59b12a338cd6b99f8a68b4335afec519824f7de

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -450,6 +450,14 @@ cat > /root/.showfuelmenu << EOF
 showmenu=$showmenu
 EOF
 
+###Set dev mode which does not run puppet
+[ -z "$devmode" ] && devmode="no"
+cat > /root/.devmode << EOF
+#Set to yes to not apply Puppet
+#Set to no to run Fuel bootstrap normally
+showmenu=$showmenu
+EOF
+
 # Prepare custom /etc/issue logon banner and script for changing IP in it
 cat > /etc/issue << EOF
 #########################################
