Added python-pylibmc to rpm and deb
Change-Id: I1917482226020efc835e950eaa7372d8769b6cb3
Related-Bug: #1353452

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -432,6 +432,7 @@ python-pbr
 python-pip
 python-prettytable
 python-py-1.4.15-1.el6
+python-pylibmc
 python-pygments-1.1.1-1.el6
 python-pyudev-0.15-1.el6
 python-qpid-qmf-0.14-14.el6_3
