Added python-pylibmc and libmemcached
Change-Id: I1917482226020efc835e950eaa7372d8769b6cb3
Related-Bug: #1353452

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -366,6 +366,7 @@ libltdl7
 liblwres80
 liblzma5
 libmagic1
+libmemcached
 libmount1
 libmpc2
 libmpfr4
@@ -746,6 +747,7 @@ python-pyasn1
 python-pycurl
 python-pyparsing
 python-pypcap
+python-pylibmc
 python-pyudev
 python-requests
 python-routes
