add python-rabbit to requirements
Needed for rabbitmq-connections-cleanup.py
(https://review.openstack.org/112677).

Change-Id: I97e5535508f1416f36175880d1d3a13042a0ccdb
Related-Bug: #856764

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -708,6 +708,7 @@ python-pycurl
 python-pyparsing
 python-pypcap
 python-pyudev
+python-rabbit
 python-requests
 python-routes
 python-saharaclient
