add python-rabbit to requirements
Needed for rabbitmq-connections-cleanup.py
(https://review.openstack.org/112677).

Change-Id: I97e5535508f1416f36175880d1d3a13042a0ccdb
Related-Bug: #856764

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -435,6 +435,7 @@ python-py-1.4.15-1.el6
 python-pygments-1.1.1-1.el6
 python-pyudev-0.15-1.el6
 python-qpid-qmf-0.14-14.el6_3
+python-rabbit
 python-requests
 python-rhsm
 python-routes
