--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -747,6 +747,7 @@ python-pycurl
 python-pyparsing
 python-pypcap
 python-pyudev
+python-rabbit
 python-requests
 python-routes
 python-saharaclient
