Add libmemcached and python-pylibmc to mirrors
Change-Id: I13a3c3306cc38cf8cdbd51987b252ebd84d7b44c
Partial-Bug: 1340657

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -170,6 +170,7 @@ libevent-devel-1.4.13-4.el6
 libfcgi-2.4.0-alt5.2
 libicu-4.2.1-9.1.el6_2
 libmlx4
+libmemcached-1.0.8
 libmongodb
 libqb
 librados2
@@ -433,6 +434,8 @@ python-pip
 python-prettytable
 python-py-1.4.15-1.el6
 python-pygments-1.1.1-1.el6
+python-pylibmc
+python-pypcap
 python-pyudev-0.15-1.el6
 python-qpid-qmf-0.14-14.el6_3
 python-requests
@@ -623,7 +626,6 @@ yum-utils-1.1.30-14.el6
 zeromq
 zeromq3
 zlib-devel-1.2.3-29.el6
-python-pypcap
 nailgun
 fuel-ostf
 shotgun
