Add libmemcached and python-pylibmc to mirrors
Change-Id: I13a3c3306cc38cf8cdbd51987b252ebd84d7b44c
Partial-Bug: 1340657

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -366,6 +366,7 @@ libltdl7
 liblwres80
 liblzma5
 libmagic1
+libmemcached10
 libmount1
 libmpc2
 libmpfr4
@@ -744,6 +745,7 @@ python-pkg-resources
 python-prettytable
 python-pyasn1
 python-pycurl
+python-pylibmc
 python-pyparsing
 python-pypcap
 python-pyudev
