--- a/iso/ks.template
+++ b/iso/ks.template
@@ -458,16 +458,31 @@ cat > /etc/issue << EOF
 #########################################
 Server is running on \m platform
 
-Fuel UI is available on: http://:8000
+Fuel UI is available on:
+http://:8000
 
 Default administrator login:    root
 Default administrator password: r00tme
+
+Default Fuel UI login: admin
+Default Fuel UI password: admin
 
 Please change root password on first login.
 
 EOF
 
-echo "sed -i \"s%\(^.*able on:\).*$%\1 http://\`ip address show eth0 | awk '/inet / {print \$2}' | cut -d/ -f1 -\`:8000%\" /etc/issue" >>/etc/rc.local
+cat >> "/etc/rc.local" << EOF
+# First delete previous fuel UI entries from /etc/issue
+sed -i '/http:\/\//d' /etc/issue
+
+# Append url for every interface with an IP address
+# This will show addres of eth9..0 in descending order
+for ip in `ip -0 -4 addr | grep "eth." | awk '/inet / {print $2 }' | cut -d/ -f1`; do
+sed -i "/available on:/a http:\/\/$ip:8000" /etc/issue
+done
+
+EOF
+
 
 # Unmounting source
 umount -f ${SOURCE}
