Add sysstat to Fuel Master and astute
sysstat provides iostat which is useful
for calculating HDD throughput.

Change-Id: I19bbee60b9ff509064843a468f47c0061736b370
Partial-Bug: #1355347

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -256,6 +256,7 @@ ruby21-rubygem-openstack
 selinux-policy-targeted
 strace
 subscription-manager
+sysstat
 system-config-firewall-base
 tcpdump
 telnet
