Fix issue with hardcoded versions for requirements
We need to build fuel images with all packages from master branch
and also we need support build from current stable version too.

Added python-babel to satisfy nailgun dependency

Change-Id: I609fe6f4185d37134842332b9d35cfcb3e2e4cb6
Closes-Bug: #1361279

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -169,6 +169,7 @@ hdparm
 heat-api
 heat-api-cfn
 heat-api-cloudwatch
+heat-common
 heat-engine
 hicolor-icon-theme
 hostname
@@ -758,6 +759,7 @@ python-setuptools
 python-setuptools-git
 python-simplejson
 python-six
+python-snmp2
 python-sqlalchemy
 python-sqlalchemy-ext
 python-stevedore
