Fix issue with hardcoded versions for requirements
We need to build fuel images with all packages from master branch
and also we need support build from current stable version too.

Added python-babel to satisfy nailgun dependency

Change-Id: I609fe6f4185d37134842332b9d35cfcb3e2e4cb6
Closes-Bug: #1361279
blueprint fuel-deploy-juno

--- a/requirements-eggs.txt
+++ b/requirements-eggs.txt
@@ -16,7 +16,7 @@ fysom==1.0.11
 iso8601==0.1.9
 jsonschema==2.3.0
 kombu==2.5.14
-netaddr==0.7.10
+netaddr>=0.7.10
 netifaces==0.8
 oslo.config==1.2.1
 pbr==0.5.21
