Fix formatting of /etc/issue \w different ip sizes
Pointed out by Artem Panchenko that if the ip sizes
are different it will result in ugly formatting.

This is follow up of bug #1351937 and previous patch
https://review.openstack.org/#/c/113605/

Change-Id: I08ce905f8386fe121c8dc9c4963601b674fccf61

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -480,7 +480,7 @@ if [ "\$first" = "yes" ]; then
   ipstr="Fuel UI is available on: http://\$ip:8000"
   first=no
 else
-  ipstr=\$(printf "%s\n%51s" "\$ipstr" "http://\$ip:8000")
+  ipstr=\$(printf "%s\n%25s%s" "\$ipstr" " " "http://\$ip:8000")
 fi
 done
 tmpissue=\$(mktemp)
